# brainiak

./: pyproject.toml  setup.py
brainiak/: bids.json  io.py
