[build-system]
requires = [
    "cython",
    # https://github.com/numpy/numpy/issues/14189
    "numpy !=1.17.0, != 1.17.1, != 1.17.2",
    "pybind11 >= 1.7",
    "setuptools",
    "setuptools_scm",
    "wheel",
]

[tool.towncrier]
directory = "docs/newsfragments"
package = "brainiak"
template = "docs/newsfragments/_template.jinja"
title_format = "BrainIAK {version} ({project_date})"

    [[tool.towncrier.type]]
    directory = "feature"
    name = "Features"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "bugfix"
    name = "Bugfixes"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "doc"
    name = "Documentation improvements"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "removal"
    name = "Deprecations and removals"
    showcontent = true
